# kata-users-python

./: .gitignore  hello.py  pyproject.toml
kata_users_python/: composition_root.py  main.py
kata_users_python/common/: __init__.py  singleton.py
kata_users_python/data/: __init__.py
kata_users_python/data/users/memory_db/: __init__.py  memory_user_repository.py
kata_users_python/domain/common/entities/: __init__.py  entity.py
kata_users_python/domain/common/vos/: __init__.py  id.py
kata_users_python/domain/entities/: user.py
kata_users_python/domain/users/entities/: __init__.py  user.py
kata_users_python/domain/users/errors/: __init__.py  errors.py
kata_users_python/domain/users/repositories/: __init__.py  user_repository.py
kata_users_python/domain/users/use_cases/: __init__.py  create_user_use_case.py  delete_user_by_email_use_case.py  get_user_by_email_use_case.py  list_users_use_case.py  update_user_use_case.py
kata_users_python/domain/users/vos/: __init__.py  address.py  password.py
kata_users_python/domain/value_objects/: address.py  email.py  name.py  password.py
kata_users_python/presentation/: users_cli_view.py  users_presenter.py  users_view.py
kata_users_python/presentation/users/: users_cli_view.py  users_presenter.py
tests/: conftest.py  test_composition_root.py
tests/domain/common/vos/: test_id.py
tests/domain/use_cases/: test_create_user_use_case.py  test_delete_user_by_email_use_case.py  test_list_users_use_case.py  test_update_user_use_case.py
tests/factories/: models.py
tests/presentation/: test_users_presenter.py
(+3 files in other folders)
