[project]
name = "kata-users-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic[email]>=2.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "faker>=30.8.2",
    "polyfactory>=2.17.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
